--- a/docs/misc/源配置.md
+++ b/docs/misc/源配置.md
@@ -5,19 +5,18 @@
 ## apt
 
 ```bash
-# 使用中科大源
+# 使用中科大的APT源
 sudo sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 ```
 
+## 修改 HOSTS 访问 GITHUB
 
-## hosts
-
-系统配置过程中，有很多需要依赖于 Github 的访问，因为国内 DNS 污染的原因，需要手动配置 hosts 文件才能够正确的访问 github。参考[hosts](config/hosts)文件中关于 github 的配置，修改本地 HOSTS 文件. HOSTS文件的位置如下：
+系统配置过程中，有很多需要依赖于 Github 的访问，因为国内 DNS 污染的原因，需要手动配置 hosts 文件才能够正确的访问 github。参考`config/hosts`文件中关于 github 的配置，修改本地 HOSTS 文件. HOSTS 文件的位置如下：
 
 - windows："C:\Windows\System32\drivers\etc\hosts"
 - Ubuntu: "/etc/hosts"
 
-查找 Github 与 IP 地址的映射关系，可以在网站https://www.ipaddress.com/上搜索如下三个网址的IP，将结果填写到Hosts文件中。
+查找 Github 与 IP 地址的映射关系，可以在网站`https://www.ipaddress.com`上搜索如下三个网址的IP，将结果填写到Hosts文件中。
 
 - github.com
 - github.global.ssl.fastly.net
@@ -25,49 +24,46 @@ sudo sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 
 ## yarn
 
+配置YARN的国内镜像。
 
 ```bash
-yarn config set registry https://registry.npm.taobao.org --global  
-yarn config set disturl https://npm.taobao.org/dist --global 
-yarn config set sass_binary_site https://npm.taobao.org/mirrors/node-sass --global  
-yarn config set electron_mirror https://npm.taobao.org/mirrors/electron/ --global  
-yarn config set puppeteer_download_host https://npm.taobao.org/mirrors --global  
-yarn config set chromedriver_cdnurl https://npm.taobao.org/mirrors/chromedriver --global  
-yarn config set operadriver_cdnurl https://npm.taobao.org/mirrors/operadriver --global  
-yarn config set phantomjs_cdnurl https://npm.taobao.org/mirrors/phantomjs --global  
-yarn config set selenium_cdnurl https://npm.taobao.org/mirrors/selenium --global  
+yarn config set registry https://registry.npm.taobao.org --global
+yarn config set disturl https://npm.taobao.org/dist --global
+yarn config set sass_binary_site https://npm.taobao.org/mirrors/node-sass --global
+yarn config set electron_mirror https://npm.taobao.org/mirrors/electron/ --global
+yarn config set puppeteer_download_host https://npm.taobao.org/mirrors --global
+yarn config set chromedriver_cdnurl https://npm.taobao.org/mirrors/chromedriver --global
+yarn config set operadriver_cdnurl https://npm.taobao.org/mirrors/operadriver --global
+yarn config set phantomjs_cdnurl https://npm.taobao.org/mirrors/phantomjs --global
+yarn config set selenium_cdnurl https://npm.taobao.org/mirrors/selenium --global
 yarn config set node_inspector_cdnurl https://npm.taobao.org/mirrors/node-inspector --global
 ```
 
-
 ## nodejs
 
-```bash 
-npm set registry https://registry.npm.taobao.org 
-npm set disturl https://npm.taobao.org/dist 
-npm set sass_binary_site https://npm.taobao.org/mirrors/node-sass 
-npm set electron_mirror https://npm.taobao.org/mirrors/electron 
-npm set puppeteer_download_host https://npm.taobao.org/mirrors 
-npm set chromedriver_cdnurl https://npm.taobao.org/mirrors/chromedriver 
-npm set operadriver_cdnurl https://npm.taobao.org/mirrors/operadriver 
-npm set phantomjs_cdnurl https://npm.taobao.org/mirrors/phantomjs 
-npm set selenium_cdnurl https://npm.taobao.org/mirrors/selenium 
-npm set node_inspector_cdnurl https://npm.taobao.org/mirrors/node-inspector 
+配置Nodejs的国内镜像。
+
+```bash
+npm set registry https://registry.npm.taobao.org
+npm set disturl https://npm.taobao.org/dist
+npm set sass_binary_site https://npm.taobao.org/mirrors/node-sass
+npm set electron_mirror https://npm.taobao.org/mirrors/electron
+npm set puppeteer_download_host https://npm.taobao.org/mirrors
+npm set chromedriver_cdnurl https://npm.taobao.org/mirrors/chromedriver
+npm set operadriver_cdnurl https://npm.taobao.org/mirrors/operadriver
+npm set phantomjs_cdnurl https://npm.taobao.org/mirrors/phantomjs
+npm set selenium_cdnurl https://npm.taobao.org/mirrors/selenium
+npm set node_inspector_cdnurl https://npm.taobao.org/mirrors/node-inspector
 npm cache clean --force
 ```
 
 ## coc mirrors
 
-Using custom registry
-You can customize npm registry for coc.nvim by add coc.nvim:registry in the file ~/.npmrc:
-
-```bash
-coc.nvim:registry=https://registry.npmmirror.com/
-```
+配置coc使用国内镜像，将`coc.nvim:registry=https://registry.npmmirror.com`添加到`~/.npmrc`文件中。
 
 ## vim-plug
 
-必要的VIM插件已经同步到Gitee。使用如下连接添加到`${MYVIMRC}`中。
+必要的 VIM 插件已经同步到 Gitee。使用如下连接添加到`${MYVIMRC}`中。
 
 ```bash
 git@gitee.com:dllvhaobo/DoxygenToolkit.vim.git
@@ -118,4 +114,3 @@ git@gitee.com:dllvhaobo/vimwiki.git
 git@gitee.com:dllvhaobo/vista.vim.git
 git@gitee.com:dllvhaobo/wildfire.vim.git
 ```
-
