--- a/docs/misc/字体.md
+++ b/docs/misc/字体.md
@@ -14,5 +14,6 @@
 - `Caskaydia Cove ExtraLight Nerd Font Complete Windows Compatible.otf`
 - `DejaVu Sans Mono Nerd Font Complete.ttf`
 
-_希望安装其他字体的可以到 [nerd-fonts] 去寻找自己喜欢的字体，并参照上述步骤进行安装_
-[nerd-fonts]:https://github.com/ryanoasis/nerd-fonts
+_希望安装其他字体的可以到 [nerd-fonts][] 去寻找自己喜欢的字体，并参照上述步骤进行安装_
+
+[nerd-fonts]: https://github.com/ryanoasis/nerd-fonts
