--- a/docs/misc/源配置.md
+++ b/docs/misc/源配置.md
@@ -2,14 +2,14 @@
 
 配置国内源，可以加速网络应用的下载。
 
-## apt
+## APT
 
 ```bash
 # 使用中科大的APT源
 sudo sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 ```
 
-## 修改 HOSTS 访问 GITHUB
+## HOSTS
 
 系统配置过程中，有很多需要依赖于 Github 的访问，因为国内 DNS 污染的原因，需要手动配置 hosts 文件才能够正确的访问 github。参考`config/hosts`文件中关于 github 的配置，修改本地 HOSTS 文件. HOSTS 文件的位置如下：
 
@@ -22,7 +22,7 @@ sudo sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 - github.global.ssl.fastly.net
 - assets-cdn.github.com
 
-## yarn
+## YARN
 
 配置YARN的国内镜像。
 
@@ -39,7 +39,7 @@ yarn config set selenium_cdnurl https://npm.taobao.org/mirrors/selenium --global
 yarn config set node_inspector_cdnurl https://npm.taobao.org/mirrors/node-inspector --global
 ```
 
-## nodejs
+## NPM
 
 配置Nodejs的国内镜像。
 
@@ -57,11 +57,18 @@ npm set node_inspector_cdnurl https://npm.taobao.org/mirrors/node-inspector
 npm cache clean --force
 ```
 
-## coc mirrors
+## COC
 
 配置coc使用国内镜像，将`coc.nvim:registry=https://registry.npmmirror.com`添加到`~/.npmrc`文件中。
 
-## vim-plug
+## PIP
+
+```bash
+python3 -m pip install --upgrade pip
+pip3 config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
+```
+
+## VIM-PLUG
 
 必要的 VIM 插件已经同步到 Gitee。使用如下连接添加到`${MYVIMRC}`中。
 
